alphabatized the references and added a few new ones

--- a/papers/lime_diagnostics/references.bib
+++ b/papers/lime_diagnostics/references.bib
@@ -1,3 +1,23 @@
+@article{AFIS,
+  title={Automated Firearms Identification System (AFIDS): Phase I},
+  author = {R. J. Blackwell and  E. P. Framan},
+  year=1980,
+  journal={AFTE Journal},
+  volume=12,
+  number=4,
+  pages={11--37},
+  note = {re-published from 1974 JPL report}
+}
+
+@article{afte:1992,
+  author={{AFTE Criteria for Identification Committee}},
+  year=1992, 
+  title={Theory of identification, range striae comparison reports and modified glossary definitions – AFTE criteria for identification committee report},
+  journal = {AFTE Journal},
+  volume=24,
+  number=2,
+  pages={336--340}
+}
 
 @article{aoas,
 	Archiveprefix = {arXiv},
@@ -11,98 +31,16 @@
 	Title = {{Automatic Matching of Bullet Lands}},
 	Year = 2016,
 	Bdsk-Url-1 = {http://adsabs.harvard.edu/abs/2016arXiv160105788H}}
-
-
-@Manual{bulletxtrctr,
-    title = {bulletxtrctr: Automatic Matching of Bullet Striae},
-    author = {Heike Hofmann and Susan Vanderplas and Ganesh Krishnan},
-    year = {2018},
-    note = {R package version 0.2.0},
-  }
-  
-@Manual{x3ptools,
-    title = {x3ptools: Tools for Working with 3D Surface Measurements},
-    author = {Heike Hofmann and Susan Vanderplas and Ganesh Krishnan and Eric Hare},
-    year = {2018},
-    note = {R package version 0.0.1.9000},
-    url = {https://github.com/heike/x3ptools},
-  }
-  
-@article{vorburger:2011,
-title = "Applications of cross-correlation functions ",
-journal = "Wear ",
-volume = "271",
-number = "3--4",
-pages = "529--533",
-year = "2011",
-note = "The 12th International Conference on Metrology and Properties of Engineering Surfaces ",
-issn = "0043-1648",
-doi = "http://dx.doi.org/10.1016/j.wear.2010.03.030",
-url = "http://www.sciencedirect.com/science/article/pii/S0043164810001407",
-author = "T.V. Vorburger and J.-F. Song and W. Chu and L. Ma and S.H. Bui and A. Zheng and T.B. Renegar",
-keywords = "Cross-correlation",
-keywords = "Surface",
-keywords = "Roughness",
-keywords = "Topography",
-keywords = "Ballistics",
-keywords = "Firearm "
-}
-
-@Manual{bulletr,
-    title = {bulletr: Algorithms for Matching Bullet Lands},
-    author = {Heike Hofmann and Eric Hare},
-    year = {2016},
-    note = {R package version 0.1},
-}
-
-@article{xie:2009,
-title = "Automated bullet-identification system based on surface topography techniques ",
-journal = "Wear ",
-volume = "266",
-number = "5--6",
-pages = "518--522",
-year = "2009",
-note = "Metrology and Properties of Engineering Surfaces ",
-issn = "0043-1648",
-doi = "http://dx.doi.org/10.1016/j.wear.2008.04.081",
-url = "http://www.sciencedirect.com/science/article/pii/S0043164808002998",
-author = "F. Xie and S. Xiao and L. Blunt and W. Zeng and X. Jiang",
-keywords = "Surface topography",
-keywords = "Bullet-identification",
-keywords = "Surface segmentation",
-keywords = "Visualization technique "
-}
-
-
-
-@article {riva:2014,
-author = {Riva, Fabiano and Champod, Christophe},
-title = {Automatic Comparison and Evaluation of Impressions Left by a Firearm on Fired Cartridge Cases},
-journal = {Journal of Forensic Sciences},
-volume = {59},
-number = {3},
-issn = {1556-4029},
-url = {http://dx.doi.org/10.1111/1556-4029.12382},
-doi = {10.1111/1556-4029.12382},
-pages = {637--647},
-keywords = {forensic science, firearms identification, likelihood ratio, cartridge cases, 3D topographies, evaluation},
-year = {2014},
-}
-
-@Manual{x3pr,
-    title = {x3pr: Read/Write functionality for X3P surface metrology format},
-    author = {{OpenFMC}},
-    year = {2014},
-    note = {R package version 1.0},
-}
-
-@book{petraco:2012,
- author = {Petraco, Nicholas and Chan, Helen},
- title = {Application of Machine Learning to Toolmarks: Statistically Based Methods for Impression Pattern Comparisons},
- year = {2012},
- isbn = {1249247675, 9781249247678},
- publisher = {Bibliographisches Institut AG},
- address = {Mannheim, W. Germany, Germany},
+	
+@Article{bachrach:2002,
+   Author="Bachrach, B. ",
+   Title="{{D}evelopment of a 3{D}-based automated firearms evidence comparison system}",
+   Journal="J. Forensic Sci.",
+   Year="2002",
+   Volume="47",
+   Number="6",
+   Pages="1253--1264",
+   Month="Nov"
 }
 
 @techreport{bachrach:2006,
@@ -116,70 +54,219 @@ Guns Using 3D Images of Bullets },
   pages={67}
 }
 
-
-@Article{bachrach:2002,
-   Author="Bachrach, B. ",
-   Title="{{D}evelopment of a 3{D}-based automated firearms evidence comparison system}",
-   Journal="J. Forensic Sci.",
-   Year="2002",
-   Volume="47",
-   Number="6",
-   Pages="1253--1264",
-   Month="Nov"
+@Manual{bulletr,
+  title = {bulletr: Algorithms for Matching Bullet Lands},
+  author = {Heike Hofmann and Eric Hare},
+  year = {2016},
+  note = {R package version 0.1},
 }
 
-@Article{chu:2011,
-   Author="Chu, W.  and Song, J.  and Vorburger, T.  and Thompson, R.  and Silver, R.",
-   Title="{{S}electing Valid Correlation Areas for Automated Bullet Identification System Based on Striation Detection}",
-   Journal="Journal of Research of the National Institute of Standards and Technology",
-   Year="2011",
-   Volume="116",
-   Number="3",
-   Pages="649",
+@Manual{bulletxtrctr,
+  title = {bulletxtrctr: Automatic Matching of Bullet Striae},
+  author = {Heike Hofmann and Susan Vanderplas and Ganesh Krishnan},
+  year = {2018},
+  note = {R package version 0.2.0},
+}
+  
+@article{biasotti:1959,
+  author = {Alfred A. Biasotti},
+  title = {A Statistical Study of the Individual Characteristics of Fired Bullets},
+  journal = {Journal of Forensic Sciences},
+  volume = 4,
+  number = 1,
+  year = 1959,
+  pages = {34--50}
+}
+
+@book{breiman:1984,
+  author = {Leo Breiman and Jerry H. Friedman and R. A. Olshen and C. J. Stone},
+  publisher ={Wadsworth, Inc.},
+  title={Classification and Regression Trees},
+  year={1984}
+}
+
+@article{breiman:2001,
+  author = {Leo Breiman}, 
+  year = 2001, 
+  title={Random Forests}, 
+  journal={Machine Learning},
+  volume={45},
+  number={1}, 
+  pages={5--32}
 }
 
 @Article{chu:2010,
-   Author="Chu, W.  and Song, J.  and Vorburger, T.  and Yen, J.  and Ballou, S.  and Bachrach, B. ",
-   Title="{{P}ilot study of automated bullet signature identification based on topography measurements and correlations}",
-   Journal="J. Forensic Sci.",
-   Year="2010",
-   Volume="55",
-   Number="2",
-   Pages="341--347",
-   Month="Mar"
+  Author="Chu, W.  and Song, J.  and Vorburger, T.  and Yen, J.  and Ballou, S.  and Bachrach, B. ",
+  Title="{{P}ilot study of automated bullet signature identification based on topography measurements and correlations}",
+  Journal="J. Forensic Sci.",
+  Year="2010",
+  Volume="55",
+  Number="2",
+  Pages="341--347",
+  Month="Mar"
+}
+
+@Article{chu:2011,
+  Author="Chu, W.  and Song, J.  and Vorburger, T.  and Thompson, R.  and Silver, R.",
+  Title="{{S}electing Valid Correlation Areas for Automated Bullet Identification System Based on Striation Detection}",
+  Journal="Journal of Research of the National Institute of Standards and Technology",
+  Year="2011",
+  Volume="116",
+  Number="3",
+  Pages="649",
 }
 
 @Article{chumbley:2010,
-   Author="Chumbley, L. S.  and Morris, M. D.  and Kreiser, M. J.  and Fisher, C.  and Craft, J.  and Genalo, L. J.  and Davis, S.  and Faden, D.  and Kidd, J. ",
-   Title="{{V}alidation of tool mark comparisons obtained using a quantitative, comparative, statistical algorithm}",
-   Journal="J. Forensic Sci.",
-   Year="2010",
-   Volume="55",
-   Number="4",
-   Pages="953--961",
-   Month="Jul"
+  Author="Chumbley, L. S.  and Morris, M. D.  and Kreiser, M. J.  and Fisher, C.  and Craft, J.  and Genalo, L. J.  and Davis, S.  and Faden, D.  and Kidd, J. ",
+  Title="{{V}alidation of tool mark comparisons obtained using a quantitative, comparative, statistical algorithm}",
+  Journal="J. Forensic Sci.",
+  Year="2010",
+  Volume="55",
+  Number="4",
+  Pages="953--961",
+  Month="Jul"
 }
 
+@article{cleveland:1979,
+  ISSN = {01621459},
+  URL = {http://www.jstor.org/stable/2286407},
+  abstract = {The visual information on a scatterplot can be greatly enhanced, with little additional cost, by computing and plotting smoothed points. Robust locally weighted regression is a method for smoothing a scatterplot, (x<sub>i</sub>, y<sub>i</sub>), i = 1, ⋯, n, in which the fitted value at x<sub>k</sub> is the value of a polynomial fit to the data using weighted least squares, where the weight for (x<sub>i</sub>, y<sub>i</sub>) is large if x<sub>i</sub> is close to x<sub>k</sub> and small if it is not. A robust fitting procedure is used that guards against deviant points distorting the smoothed points. Visual, computational, and statistical issues of robust locally weighted regression are discussed. Several examples, including data on lead intoxication, are used to illustrate the methodology.},
+  author = {William S. Cleveland},
+  journal = {Journal of the American Statistical Association},
+  number = {368},
+  pages = {829--836},
+  publisher = {Taylor & Francis, Ltd.},
+  title = {Robust Locally Weighted Regression and Smoothing Scatterplots},
+  volume = {74},
+  year = {1979}
+}
 
-@article{thompson:2013,
-title = "Automatic identification of bullet signatures based on consecutive matching striae (CMS) criteria ",
-journal = "Forensic Science International ",
-volume = "231",
-number = "1--3",
-pages = "137--141",
-year = "2013",
-note = "",
-issn = "0379-0738",
-doi = "http://dx.doi.org/10.1016/j.forsciint.2013.04.025",
-url = "http://www.sciencedirect.com/science/article/pii/S037907381300248X",
-author = "Wei Chu and Robert M. Thompson and John Song and Theodore V. Vorburger",
-keywords = "Forensic science",
-keywords = "Toolmark identification",
-keywords = "Consecutive matching striae (CMS)",
-keywords = "Topography measurement",
-keywords = "Feature profile",
-keywords = "Identification criteria ",
-abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for firearm and toolmark identifications have been widely accepted by forensic examiners, although there have been questions concerning its observer subjectivity and limited statistical support. In this paper, based on signal processing and extraction, a model for the automatic and objective counting of \{CMS\} is proposed. The position and shape information of the striae on the bullet land is represented by a feature profile, which is used for determining the \{CMS\} number automatically. Rapid counting of \{CMS\} number provides a basis for ballistics correlations with large databases and further statistical and probability analysis. Experimental results in this report using bullets fired from ten consecutively manufactured barrels support this developed model. "
+@incollection{cleveland:1992,
+  author = "William S. Cleveland and E. Grosse and W. M. Shyu",
+  title = "Local regression models",
+  editor = {John M. Chambers and Trevor J. Hastie},
+  booktitle={{Statistical} {Models} in {S}},
+  publisher = "Chapman and Hall",
+  pages = {309 -- 376},
+  chapter = 8,
+  year = 1992
+}
+
+@Article{deceuster:2015,
+  Author={{De Ceuster}, J.  and Dujardin, S. },
+  Title="{{T}he reference ballistic imaging database revisited}",
+  Journal="Forensic Science International",
+  Year="2015",
+  Volume="248",
+  Pages="82--87",
+  Month="Mar"
+}
+
+@Article{dekinder:2004,
+  Author="{De Kinder}, J.  and Tulleners, F.  and Thiebaut, H. ",
+  Title="{{R}eference ballistic imaging database performance}",
+  Journal="Forensic Science International",
+  Year="2004",
+  Volume="140",
+  Number="2-3",
+  Pages="207--215",
+  Month="Mar"
+}
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2009},
+  isbn = {978-0-387-98140-6},
+  url = {http://had.co.nz/ggplot2/book},
+}
+
+@article{giannelli:2011,
+  author={Paul C. Giannelli},
+  title={Ballistics Evidence Under Fire},
+  journal={Criminal Justice},
+  volume=25,
+  number=4,
+  year=2011,
+  pages={50--51}
+}
+
+@article{goodman:2016, 
+  title = {{European Union regulations on algorithmic decision-making and a "right to explanation"}}, 
+  author = {Goodman, Bryce and Flaxman, Seth}, 
+  abstract = {We summarize the potential impact that the European Union's new General Data Protection Regulation will have on the routine use of machine learning algorithms. Slated to take effect as law across the EU in 2018, it will restrict automated individual decision-making (that is, algorithms that make decisions based on user-level predictors) which "significantly affect" users. The law will also effectively create a "right to explanation," whereby a user can ask for an explanation of an algorithmic decision that was made about them. We argue that while this law will pose large challenges for industry, it highlights opportunities for computer scientists to take the lead in designing algorithms and evaluation frameworks which avoid discrimination and enable explanation.}, 
+  doi = {10.1609/aimag.v38i3.2741}, 
+  arxiv = {1606.08813}, 
+  year = {2016}, 
+  keywords = {\#machine learning explanations}
+}
+
+@article{hamby,
+  author ={James E. Hamby and David J. Brundage and James W. Thorpe}, 
+  title={{The Identification of Bullets Fired from 10 Consecutively Rifled 9mm   Ruger Pistol Barrels: A Research Project Involving 507 Participants from 20   Countries}},
+  journal={AFTE Journal}, 
+  volume={41}, 
+  number={2}, 
+  year={2009},
+  pages={99--110}
+}
+
+@article{hummel,
+	Author = {J\"urgen Hummel},
+	Journal = {Journal of Computational Statistics},
+	Pages = {23--33},
+	Title = {Linked Bar Charts: Analysing Categorical Data Graphically.},
+	Volume = {11},
+	Year = {1996}
+}
+
+@incollection{jain:2015,
+  author      = "Anil K. Jain and K. Cao",
+  title       = "Fingerprint Image Analysis: Role of Orientation Patch and Ridge Structure Dictionaries",
+  editor      = "I. L. Dryden and J. T. Kent",
+  booktitle   = "Geometry Driven Statistics",
+  publisher   = "John Wiley and Sons",
+  address     = "New York",
+  year        = 2015
+}
+
+@article{jain:2015:tphil,
+  author={A. K. Jain and A. Ross}, 
+  title="Bridging the Gap: From Biometrics to Forensics", 
+  journal={Philosophical Transactions of The Royal Society B}, 
+  volume= 370, 
+  number= 1674, 
+  year=2015
+}
+
+@Book{knitr,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {http://yihui.name/knitr/},
+}
+  
+@MISC{koren:2009,
+  author = {Yehuda Koren},
+  title = {{The BellKor Solution to the Netflix Grand Prize}},
+  year = {2009},
+  howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_BellKor.pdf}}
+}
+
+@Article{ma:2004,
+  Author="Ma, L.  and Song, J.  and Whitenton, E.  and Zheng, A.  and Vorburger, T.  and Zhou, J. ",
+  Title="{{N}{I}{S}{T} bullet signature measurement system for {R}{M} ({R}eference {M}aterial) 8240 standard bullets}",
+  Journal="Journal of Forensic Sciences",
+  Year="2004",
+  Volume="49",
+  Number="4",
+  Pages="649--659",
+  Month="Jul"
 }
 
 @article{lock2013significance,
@@ -193,148 +280,6 @@ abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for 
   publisher={Taylor \& Francis}
 }
 
-@article{AFIS,
-  title={Automated Firearms Identification System (AFIDS): Phase I},
-  author = {R. J. Blackwell and  E. P. Framan},
-  year=1980,
-  journal={AFTE Journal},
-  volume=12,
-  number=4,
-  pages={11--37},
-  note = {re-published from 1974 JPL report}
-}
-
-@Article{rocr,
-    entry = {article},
-    title = {{ROCR: visualizing classifier performance in R}},
-    author = {T. Sing and O. Sander and N. Beerenwinkel and T.
-      Lengauer},
-    year = {2005},
-    journal = {Bioinformatics},
-    volume = {21},
-    number = {20},
-    pages = {3940--3941},
-    url = {http://rocr.bioinf.mpi-sb.mpg.de},
-  }
-  
-@article{cleveland:1979,
- ISSN = {01621459},
- URL = {http://www.jstor.org/stable/2286407},
- abstract = {The visual information on a scatterplot can be greatly enhanced, with little additional cost, by computing and plotting smoothed points. Robust locally weighted regression is a method for smoothing a scatterplot, (x<sub>i</sub>, y<sub>i</sub>), i = 1, ⋯, n, in which the fitted value at x<sub>k</sub> is the value of a polynomial fit to the data using weighted least squares, where the weight for (x<sub>i</sub>, y<sub>i</sub>) is large if x<sub>i</sub> is close to x<sub>k</sub> and small if it is not. A robust fitting procedure is used that guards against deviant points distorting the smoothed points. Visual, computational, and statistical issues of robust locally weighted regression are discussed. Several examples, including data on lead intoxication, are used to illustrate the methodology.},
- author = {William S. Cleveland},
- journal = {Journal of the American Statistical Association},
- number = {368},
- pages = {829--836},
- publisher = {Taylor & Francis, Ltd.},
- title = {Robust Locally Weighted Regression and Smoothing Scatterplots},
- volume = {74},
- year = {1979}
-}
-
-
-
-@incollection{cleveland:1992,
- author = "William S. Cleveland and E. Grosse and W. M. Shyu",
- title = "Local regression models",
- editor = {John M. Chambers and Trevor J. Hastie},
- booktitle={{Statistical} {Models} in {S}},
- publisher = "Chapman and Hall",
- pages = {309 -- 376},
- chapter = 8,
- year = 1992
-}
-
-@article{hummel,
-	Author = {J\"urgen Hummel},
-	Journal = {Journal of Computational Statistics},
-	Pages = {23--33},
-	Title = {Linked Bar Charts: Analysing Categorical Data Graphically.},
-	Volume = {11},
-	Year = {1996}}
-	
-@Article{ma:2004,
-   Author="Ma, L.  and Song, J.  and Whitenton, E.  and Zheng, A.  and Vorburger, T.  and Zhou, J. ",
-   Title="{{N}{I}{S}{T} bullet signature measurement system for {R}{M} ({R}eference {M}aterial) 8240 standard bullets}",
-   Journal="Journal of Forensic Sciences",
-   Year="2004",
-   Volume="49",
-   Number="4",
-   Pages="649--659",
-   Month="Jul"
-}
-
-@article{roberge:2006,
-  author = {Roberge, D. and Beauchamp, A.},
-  title={The use of BulletTrax-3D in a study of consecutively manufactured barrels},
-  journal={AFTE Journal},
-  year=2006,
-  volume=38,
-  number=2,
-  pages={166--172}
-}
-
-@Article{dekinder:2004,
-   Author="{De Kinder}, J.  and Tulleners, F.  and Thiebaut, H. ",
-   Title="{{R}eference ballistic imaging database performance}",
-   Journal="Forensic Science International",
-   Year="2004",
-   Volume="140",
-   Number="2-3",
-   Pages="207--215",
-   Month="Mar"
-}
-
-@Article{deceuster:2015,
-   Author={{De Ceuster}, J.  and Dujardin, S. },
-   Title="{{T}he reference ballistic imaging database revisited}",
-   Journal="Forensic Science International",
-   Year="2015",
-   Volume="248",
-   Pages="82--87",
-   Month="Mar"
-}
-
-@article{jain:2015:tphil,
-  author={A. K. Jain and A. Ross}, 
-  title="Bridging the Gap: From Biometrics to Forensics", 
-  journal={Philosophical Transactions of The Royal Society B}, 
-  volume= 370, 
-  number= 1674, 
-  year=2015
-}
-
-@incollection{jain:2015,
-  author      = "Anil K. Jain and K. Cao",
-  title       = "Fingerprint Image Analysis: Role of Orientation Patch and Ridge Structure Dictionaries",
-  editor      = "I. L. Dryden and J. T. Kent",
-  booktitle   = "Geometry Driven Statistics",
-  publisher   = "John Wiley and Sons",
-  address     = "New York",
-  year        = 2015
-}
-
-
-@MISC{piotte:2009,
-    author = {Martin Piotte and Martin Chabbert},
-    title = {{The Pragmatic Theory Solution to the Netflix Grand Prize, in: Netflix prize documentation}},
-    year = {2009},
-    howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_PragmaticTheory.pdf}}
-}
-
-@MISC{toescher:2009,
-    author = {Andreas T\"oscher and Michael Jahrer and Robert M. Bell},
-    title = {{The BigChaos Solution to the Netflix Grand Prize}},
-    year = {2009},
-    howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_BigChaos.pdf}}
-}
-
-@MISC{koren:2009,
-    author = {Yehuda Koren},
-    title = {{The BellKor Solution to the Netflix Grand Prize}},
-    year = {2009},
-    howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_BellKor.pdf}}
-}
-
 @article{miller:1998,
   author={J. Miller},
   title={Criteria for identification of toolmarks},
@@ -345,86 +290,6 @@ abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for 
   pages={15--61}
 }
 
-@article{breiman:2001,
-  author = {Leo Breiman}, 
-  year = 2001, 
-  title={Random Forests}, 
-  journal={Machine Learning},
-  volume={45},
-  number={1}, 
-  pages={5--32}
-}
-
-@Article{randomForest,
-    title = {Classification and Regression by randomForest},
-    author = {Andy Liaw and Matthew Wiener},
-    journal = {R News},
-    year = {2002},
-    volume = {2},
-    number = {3},
-    pages = {18-22},
-    url = {http://CRAN.R-project.org/doc/Rnews/},
-  }
-  
-@book{tukey:1977,
-   author =    {John Wilder Tukey},
-   title =     {Exploratory Data Analysis.},
-   year =      1977,
-   publisher = {Addison-Wesley},
-}
-
-@Book{knitr,
-    title = {Dynamic Documents with {R} and knitr},
-    author = {Yihui Xie},
-    publisher = {Chapman and Hall/CRC},
-    address = {Boca Raton, Florida},
-    year = {2015},
-    edition = {2nd},
-    note = {ISBN 978-1498716963},
-    url = {http://yihui.name/knitr/},
-  }
-  
-@Manual{R,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2016},
-    url = {https://www.R-project.org/},
-  }
-  
-@Book{ggplot2,
-    author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
-    publisher = {Springer-Verlag New York},
-    year = {2009},
-    isbn = {978-0-387-98140-6},
-    url = {http://had.co.nz/ggplot2/book},
-  }
-
-@book{breiman:1984,
-  author = {Leo Breiman and Jerry H. Friedman and R. A. Olshen and C. J. Stone},
-  publisher ={Wadsworth, Inc.},
-  title={Classification and Regression Trees},
-  year={1984}
-}
-
-@Manual{rpart.plot,
-    title = {rpart.plot: Plot 'rpart' Models: An Enhanced Version of 'plot.rpart'},
-    author = {Stephen Milborrow},
-    year = {2015},
-    note = {{R} package version 1.5.3},
-    url = {http://CRAN.R-project.org/package=rpart.plot},
-  }
-
-@Manual{rpart,
-    title = {rpart: Recursive Partitioning and Regression Trees},
-    author = {Terry Therneau and Beth Atkinson and Brian Ripley},
-    year = {2015},
-    note = {{R} package version 4.1-10},
-    url = {http://CRAN.R-project.org/package=rpart},
-  }
-  
 @article{moran:2003,
   title={{The Application of the Scientific Method to Firearm and Toolmark Examination}},
   author={B. Moran and J. Murdock},
@@ -433,57 +298,6 @@ abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for 
   number=2,
   year=2003,
   pages={234--240}
-}
-
-
-@article{nichols:2003,
-  title={{Consecutive Matching Striations (CMS): Its Definition, Study and Application in the Discipline of Firearms and Tool Mark Identification}},
-  author={Ronald G. Nichols},
-  year=2003,
-  volume=35,
-  number=3,
-  pages ={298--306},
-  journal = {AFTE Journal}
-}
-
-@article{giannelli:2011,
-  author={Paul C. Giannelli},
-  title={Ballistics Evidence Under Fire},
-  journal={Criminal Justice},
-  volume=25,
-  number=4,
-  year=2011,
-  pages={50--51}
-}
-
-@article{nichols:1997,
-  author={Ronald G. Nichols},
-  title={Firearm and Toolmark Identification Criteria: A Review of the Literature},
-  journal={Journal of Forensic Sciences}, 
-  volume= 42, 
-  number=3, 
-  year=1997, 
-  pages={466--474}
-}
-
-@article{nichols:2003b,
-  author={Ronald G. Nichols},
-  title={Firearm and Toolmark Identification Criteria: A Review of the Literature: part II},
-  journal={Journal of Forensic Sciences}, 
-  volume= 48, 
-  number=2, 
-  year=2003, 
-  pages={318--327}
-}
-
-@article{afte:1992,
-  author={{AFTE Criteria for Identification Committee}},
-  year=1992, 
-  title={Theory of identification, range striae comparison reports and modified glossary definitions – AFTE criteria for identification committee report},
-  journal = {AFTE Journal},
-  volume=24,
-  number=2,
-  pages={336--340}
 }
 
 @book{nap:2008,
@@ -495,42 +309,6 @@ abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for 
   pages=344,
   publisher = "The National Academies Press",
   address   = "Washington, DC"
-}
-
-@Manual{plotly,
-    title = {plotly: Create interactive web-based graphs via plotly's API},
-    author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
-    note = {{R} package version 2.0.2},
-    url = {http://CRAN.R-project.org/package=plotly},
-  }
-  
-@Manual{shiny,
-    title = {shiny: Web Application Framework for R},
-    author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
-    year = {2015},
-    note = {{R} package version 0.12.2},
-    url = {http://CRAN.R-project.org/package=shiny},
-  }
-
-@article{biasotti:1959,
-  author = {Alfred A. Biasotti},
-  title = {A Statistical Study of the Individual Characteristics of Fired Bullets},
-  journal = {Journal of Forensic Sciences},
-  volume = 4,
-  number = 1,
-  year = 1959,
-  pages = {34--50}
-}
-
-
-@article{hamby,
-author ={James E. Hamby and David J. Brundage and James W. Thorpe}, 
-title={{The Identification of Bullets Fired from 10 Consecutively Rifled 9mm Ruger Pistol Barrels: A Research Project Involving 507 Participants from 20 Countries}},
-journal={AFTE Journal}, 
-volume={41}, 
-number={2}, 
-year={2009},
-pages={99--110}
 }
 
 @BOOK{NAS:2009,
@@ -545,11 +323,233 @@ pages={99--110}
   address   = "Washington, DC"
 }
 
+@article{nichols:1997,
+  author={Ronald G. Nichols},
+  title={Firearm and Toolmark Identification Criteria: A Review of the Literature},
+  journal={Journal of Forensic Sciences}, 
+  volume= 42, 
+  number=3, 
+  year=1997, 
+  pages={466--474}
+}
+
+@article{nichols:2003,
+  title={{Consecutive Matching Striations (CMS): Its Definition, Study and Application in the Discipline of Firearms and Tool Mark Identification}},
+  author={Ronald G. Nichols},
+  year=2003,
+  volume=35,
+  number=3,
+  pages ={298--306},
+  journal = {AFTE Journal}
+}
+
+@article{nichols:2003b,
+  author={Ronald G. Nichols},
+  title={Firearm and Toolmark Identification Criteria: A Review of the Literature: part II},
+  journal={Journal of Forensic Sciences}, 
+  volume= 48, 
+  number=2, 
+  year=2003, 
+  pages={318--327}
+}
+
+@book{petraco:2012,
+  author = {Petraco, Nicholas and Chan, Helen},
+  title = {Application of Machine Learning to Toolmarks: Statistically Based Methods for Impression Pattern Comparisons},
+  year = {2012},
+  isbn = {1249247675, 9781249247678},
+  publisher = {Bibliographisches Institut AG},
+  address = {Mannheim, W. Germany, Germany},
+}
+
+@MISC{piotte:2009,
+  author = {Martin Piotte and Martin Chabbert},
+  title = {{The Pragmatic Theory Solution to the Netflix Grand Prize, in: Netflix prize documentation}},
+  year = {2009},
+  howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_PragmaticTheory.pdf}}
+}
+
+@Manual{plotly,
+  title = {plotly: Create interactive web-based graphs via plotly's API},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  note = {{R} package version 2.0.2},
+  url = {http://CRAN.R-project.org/package=plotly},
+}
+
+@Manual{R,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2016},
+  url = {https://www.R-project.org/},
+}
+
+@Article{randomForest,
+  title = {Classification and Regression by randomForest},
+  author = {Andy Liaw and Matthew Wiener},
+  journal = {R News},
+  year = {2002},
+  volume = {2},
+  number = {3},
+  pages = {18-22},
+  url = {http://CRAN.R-project.org/doc/Rnews/},
+}
+
+@article{roberge:2006,
+  author = {Roberge, D. and Beauchamp, A.},
+  title={The use of BulletTrax-3D in a study of consecutively manufactured barrels},
+  journal={AFTE Journal},
+  year=2006,
+  volume=38,
+  number=2,
+  pages={166--172}
+}
+
+@Article{rocr,
+  entry = {article},
+  title = {{ROCR: visualizing classifier performance in R}},
+  author = {T. Sing and O. Sander and N. Beerenwinkel and T.
+    Lengauer},
+  year = {2005},
+  journal = {Bioinformatics},
+  volume = {21},
+  number = {20},
+  pages = {3940--3941},
+  url = {http://rocr.bioinf.mpi-sb.mpg.de},
+}
+  
+@Manual{rpart,
+  title = {rpart: Recursive Partitioning and Regression Trees},
+  author = {Terry Therneau and Beth Atkinson and Brian Ripley},
+  year = {2015},
+  note = {{R} package version 4.1-10},
+  url = {http://CRAN.R-project.org/package=rpart},
+}
+
+@Manual{rpart.plot,
+  title = {rpart.plot: Plot 'rpart' Models: An Enhanced Version of 'plot.rpart'},
+  author = {Stephen Milborrow},
+  year = {2015},
+  note = {{R} package version 1.5.3},
+  url = {http://CRAN.R-project.org/package=rpart.plot},
+}
+
+@article {riva:2014,
+  author = {Riva, Fabiano and Champod, Christophe},
+  title = {Automatic Comparison and Evaluation of Impressions Left by a Firearm on Fired Cartridge Cases},
+  journal = {Journal of Forensic Sciences},
+  volume = {59},
+  number = {3},
+  issn = {1556-4029},
+  url = {http://dx.doi.org/10.1111/1556-4029.12382},
+  doi = {10.1111/1556-4029.12382},
+  pages = {637--647},
+  keywords = {forensic science, firearms identification, likelihood ratio, cartridge cases, 3D topographies, evaluation},
+  year = {2014},
+}
+
+@Manual{shiny,
+  title = {shiny: Web Application Framework for R},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
+  year = {2015},
+  note = {{R} package version 0.12.2},
+  url = {http://CRAN.R-project.org/package=shiny},
+}
+
+@MISC{toescher:2009,
+  author = {Andreas T\"oscher and Michael Jahrer and Robert M. Bell},
+  title = {{The BigChaos Solution to the Netflix Grand Prize}},
+  year = {2009},
+  howpublished={\url{http://www.netflixprize.com/assets/GrandPrize2009_BPC_BigChaos.pdf}}
+}
+
+@article{thompson:2013,
+  title = "Automatic identification of bullet signatures based on consecutive matching striae (CMS) criteria ",
+  journal = "Forensic Science International ",
+  volume = "231",
+  number = "1--3",
+  pages = "137--141",
+  year = "2013",
+  note = "",
+  issn = "0379-0738",
+  doi = "http://dx.doi.org/10.1016/j.forsciint.2013.04.025",
+  url = "http://www.sciencedirect.com/science/article/pii/S037907381300248X",
+  author = "Wei Chu and Robert M. Thompson and John Song and Theodore V. Vorburger",
+  keywords = "Forensic science",
+  keywords = "Toolmark identification",
+  keywords = "Consecutive matching striae (CMS)",
+  keywords = "Topography measurement",
+  keywords = "Feature profile",
+  keywords = "Identification criteria ",
+  abstract = "Abstract The consecutive matching striae (CMS) numeric criteria for firearm and toolmark identifications have been widely accepted by forensic examiners, although there have been questions concerning its observer subjectivity and limited statistical support. In this paper, based on signal processing and extraction, a model for the automatic and objective counting of \{CMS\} is proposed. The position and shape information of the striae on the bullet land is represented by a feature profile, which is used for determining the \{CMS\} number automatically. Rapid counting of \{CMS\} number provides a basis for ballistics correlations with large databases and further statistical and probability analysis. Experimental results in this report using bullets fired from ten consecutively manufactured barrels support this developed model. "
+}
+
+@book{tukey:1977,
+  author =    {John Wilder Tukey},
+  title =     {Exploratory Data Analysis.},
+  year =      1977,
+  publisher = {Addison-Wesley},
+}
+
+@article{vorburger:2011,
+  title = "Applications of cross-correlation functions ",
+  journal = "Wear ",
+  volume = "271",
+  number = "3--4",
+  pages = "529--533",
+  year = "2011",
+  note = "The 12th International Conference on Metrology and Properties of Engineering Surfaces ",
+  issn = "0043-1648",
+  doi = "http://dx.doi.org/10.1016/j.wear.2010.03.030",
+  url = "http://www.sciencedirect.com/science/article/pii/S0043164810001407",
+  author = "T.V. Vorburger and J.-F. Song and W. Chu and L. Ma and S.H. Bui and A. Zheng and T.B. Renegar",
+  keywords = "Cross-correlation",
+  keywords = "Surface",
+  keywords = "Roughness",
+  keywords = "Topography",
+  keywords = "Ballistics",
+  keywords = "Firearm "
+}
+
+@Manual{x3pr,
+  title = {x3pr: Read/Write functionality for X3P surface metrology format},
+  author = {{OpenFMC}},
+  year = {2014},
+  note = {R package version 1.0},
+}
+
+@Manual{x3ptools,
+  title = {x3ptools: Tools for Working with 3D Surface Measurements},
+  author = {Heike Hofmann and Susan Vanderplas and Ganesh Krishnan and Eric Hare},
+  year = {2018},
+  note = {R package version 0.0.1.9000},
+  url = {https://github.com/heike/x3ptools},
+}
+  
+@article{xie:2009,
+  title = "Automated bullet-identification system based on surface topography techniques ",
+  journal = "Wear ",
+  volume = "266",
+  number = "5--6",
+  pages = "518--522",
+  year = "2009",
+  note = "Metrology and Properties of Engineering Surfaces ",
+  issn = "0043-1648",
+  doi = "http://dx.doi.org/10.1016/j.wear.2008.04.081",
+  url = "http://www.sciencedirect.com/science/article/pii/S0043164808002998",
+  author = "F. Xie and S. Xiao and L. Blunt and W. Zeng and X. Jiang",
+  keywords = "Surface topography",
+  keywords = "Bullet-identification",
+  keywords = "Surface segmentation",
+  keywords = "Visualization technique "
+}
+
 @article{yu:2018, 
   title = {{Artificial intelligence in healthcare}}, 
   author = {Yu, Kun-Hsing and Beam, Andrew L. and Kohane, Isaac S.}, 
   journal = {Nature Biomedical Engineering}, 
-  abstract = {This Review summarizes the medical applications of artificial intelligence, and its economic, legal and social implications for healthcare.}, 
+  abstract = {This Review summarizes the medical applications of artificial intelligence, and its economic, legal and social implications for healthcare.},
   volume = {2}, 
   pages = {719}, 
   issn = {2157-846X}, 
